[package]
name = "secure-survey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.curv-kzen]
version = "0.9.0"
default-features = false
features = ["num-bigint"]

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4.2"
default-features = false